# mythic-mainnet-beta

./: .gitignore  2026-02-23-142119-please-deploy-httpsgithubcomcutupdevpumpfun.txt  Cargo.toml  DEPLOY_BRIDGE_L1_README.md  README.md  brand_research.md  brand_strategy.md  deploy-bridge-l1.sh  full_rebuild.sh  init-bridge-l1-mainnet.mjs  initialize-bridge-l1.ts  mainnet-launch-checklist.md  mythic_rpc_setup_guide.md  package-lock.json  package.json  read-bridge-config.mjs  start-production.sh  start-testnet.sh  update-bridge-config.mjs
brand-assets/: README.md
brand-assets/social/: capture-gif.mjs  capture-png.mjs  dexscreener-banner-animated.html
firedancer/patches/: topology-changes.md
firedancer/scripts/: build-mythic.sh
firedancer/src/config/: mythic_config.toml
firedancer/src/sequencer/: fd_sequencer.h  fd_sequencer_tile.c  fd_sequencer_tile.h
genesis/: Cargo.toml
genesis/src/: main.rs  modifier.rs
infra/: build-frankendancer.sh  copy-artifacts.sh  fast-exit-design.md  fdancer-s1-mainnet.toml  fdancer-s1-testnet.toml  fdancer-s2-mainnet.toml  fdancer-s2-testnet.toml  migration-cutover.sh  ufw-server2.sh  update-helius-rpc.sh  verify-all.sh
legal/: DUNA-DECLARATION-OF-FORMATION.md  mythic-foundation-duna-governing-principles.md  wyoming-sos-filing-data.md
mythiclabs-site/: package.json
programs/ai-precompiles/: Cargo.toml
programs/ai-precompiles/src/: lib.rs
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
programs/bridge/: Cargo.toml
programs/bridge-l2/: Cargo.toml
programs/bridge-l2/src/: lib.rs
programs/bridge-l2/tests/: bridge_l2_tests.rs
programs/bridge/src/: lib.rs
programs/bridge/tests/: bridge_tests.rs
programs/compute-market/: Cargo.toml
programs/compute-market/src/: lib.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/launchpad/: Cargo.toml
programs/launchpad/src/: lib.rs
programs/myth-names/: Cargo.toml
programs/myth-names/src/: lib.rs
programs/myth-token/: Cargo.toml
programs/myth-token/src/: lib.rs
programs/settlement/: Cargo.toml
programs/settlement/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
programs/swap/: Cargo.toml
programs/swap/src/: lib.rs
relayer/: Cargo.toml
relayer/src/: main.rs
scripts/: bridge-expedite-withdrawal.mjs  calc-topup.py  challenge-nonce53.mjs  create-launchpad-tokens.cjs  create-new-genesis.sh  create-sim-tokens.sh  deploy-bridge-l1.sh  deploy-testnet.sh  distribute-rewards.js  drain-swap-pools.mjs  estimate-deploy-cost.py  expedite-6dRNG.mjs  export-l2-accounts.py  export-l2-full.mjs  fix-launchpad-config.cjs  fix-mythmaker-mc.mjs  fund-bridge-reserve.cjs  fund-wallets.sh  gen-activity.js  generate-activity.sh  init-all-programs.cjs  init-all-programs.js  init-all-programs.mjs  init-l1-bridge.js  init-l2-bridge.ts  init-launchpad-live.mjs  init-launchpad-v2.mjs  init-launchpad.cjs  init-myth-names.mjs  l1-launchpad-indexer.mjs  l1-migration-cranker.mjs  launchpad-tokens.json  market-maker.mjs  market-maker.mjs.bak.1772540599  match-l1-liquidity.mjs  meteora-partner-setup.mjs  meteora-test-launch.mjs  parse_original_deposits.py  price-sync-daemon.mjs  price-sync-daemon.mjs.bak.1772540658  (+18 more)
sdk/: Cargo.toml
sdk/src/: ai.rs  bridge.rs  bridge_l2.rs  compute.rs  constants.rs  lib.rs  settlement.rs  token.rs
services/: AI_ARCHITECTURE.md
services/ai-gateway/: .env.example  package.json
services/ai-gateway/src/: index.ts  sdk.ts
services/inference-server/: .env.example  package.json  setup.sh
services/inference-server/src/: chain.ts  config.ts  index.ts  inference.ts  server.ts  watcher.ts
services/reward-distributor/: ecosystem.config.js  index.js
services/supply-oracle/: index.js  package.json
website/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
website/public/: install.sh  myth-token-metadata.json  validator-install.sh
website/public/launch/: index.html  voiceover.m4a
website/public/releases/: mythic-cli-1.0.0.tgz
website/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
website/src/app/api/bridge/: route.ts
website/src/app/api/fee-oracle/: route.ts
website/src/app/api/l1-rpc/: route.ts
website/src/app/api/l2-rpc/: route.ts
website/src/app/api/myth-supply/: route.ts
website/src/app/api/myth-supply/circulating/: route.ts
website/src/app/api/myth-supply/total/: route.ts
website/src/app/api/network-status/: route.ts
website/src/app/api/profiles/: route.ts
website/src/app/api/profiles/[wallet]/: route.ts
website/src/app/api/register-domain/: route.ts
website/src/app/api/sol-price/: route.ts
website/src/app/api/supply/: route.ts
website/src/app/api/upload/: route.ts
website/src/app/api/uploads/[filename]/: route.ts
website/src/app/bridge/: page.tsx
website/src/app/docs/: layout.tsx  page.tsx
website/src/app/proof/: ProofDashboard.tsx  page.tsx
website/src/app/whitepaper/: page.tsx
website/src/components/: AnimatedSection.tsx  BridgeBonuses.tsx  BridgeCard.tsx  BridgeLiveStats.tsx  BridgeTutorialModal.tsx  DocsSidebar.tsx  ExplorerSearch.tsx  FeatureCard.tsx  Footer.tsx  HeroGem.tsx  HeroGem3D.tsx  LiveProof.tsx  Navbar.tsx  NetworkProof.tsx  OnChainProof.tsx  ProfileSetupModal.tsx  PumpFunBanner.tsx  StatsBar.tsx  TokenWarningPopup.tsx  TokenomicsTable.tsx  WalletButton.tsx
website/src/hooks/: useBridge.ts  useBridge.ts.bak  useMythPrice.ts  useProfile.ts  useWallet.ts
website/src/lib/: bridge-sdk.ts  myth-names-sdk.ts  profiles.ts
website/src/lib/bridge-sdk/: accounts.ts  bridge-l1.ts  bridge-l2.ts  index.ts  pumpswap.ts  types.ts
website/src/providers/: ProfileProvider.tsx  WalletProvider.tsx
