[workspace]
resolver = "2"
members = [
    "programs/bridge",
    "programs/bridge-l2",
    "programs/compute-market",
    "programs/ai-precompiles",
    "programs/settlement",
    "programs/myth-token",
    "genesis",
    "relayer",
    "sdk",
]

[workspace.dependencies]
solana-program = "2.0"
solana-sdk = "2.0"
solana-client = "2.0"
solana-transaction-status = "2.0"
spl-token = "6.0"
spl-associated-token-account = "5.0"
borsh = { version = "0.10", features = ["const-generics"] }
thiserror = "2.0"
sha2 = "0.10"
bytemuck = { version = "1.18", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.8"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
