[workspace]
resolver = "2"
members = [
    "programs/bridge",
    "programs/bridge-l2",
    "programs/compute-market",
    "programs/ai-precompiles",
    "programs/settlement",
    "programs/myth-token",
    "programs/launchpad",
    "programs/governance",
    "programs/staking",
    "programs/swap",
    "programs/airdrop",
]
exclude = [
    "genesis",
    "sdk",
]

[workspace.dependencies]
solana-program = "=2.1.17"
solana-sdk = "=2.1.17"
solana-client = "=2.1.17"
solana-transaction-status = "=2.1.17"
solana-program-test = "=2.1.17"
blake3 = ">=1.3, <1.8"
getrandom = { version = "0.2", features = ["custom"] }
spl-token = "7.0"
spl-associated-token-account = "6.0"
borsh = { version = "0.10", features = ["const-generics"] }
thiserror = "2.0"
sha2 = "0.10"
bytemuck = { version = "1.18", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.7"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
