[package]
name = "mythic-relayer"
version = "0.1.0"
edition = "2021"
description = "Mythic L2 — Bridge relayer: watches L1 events, triggers L2 minting"

[[bin]]
name = "mythic-relayer"
path = "src/main.rs"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
