[package]
name = "mythic-relayer"
version = "0.1.0"
edition = "2021"
description = "Mythic L2 — Bridge relayer: watches L1 deposits, triggers L2 native transfers"

[[bin]]
name = "mythic-relayer"
path = "src/main.rs"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
