[package]
name = "mythic-airdrop"
version = "0.1.0"
edition = "2021"
description = "Mythic L2 — Merkle-based airdrop and token distribution program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
