[package]
name = "mythic-bridge-l2"
version = "0.1.0"
edition = "2021"
description = "Mythic L2 — L2-side bridge: mint/burn wrapped assets"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full"] }
