[package]
name = "mythic-staking"
version = "0.1.0"
edition = "2021"
description = "Mythic L2 — MYTH token staking with Synthetix-style reward accumulator"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
